--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <app-sidebar></app-sidebar>
   <div class="content-area">
-    <app-header></app-header>
+    <!-- <app-header></app-header> -->
     <main>
       <router-outlet></router-outlet>
     </main>
